target hack zoom in\out
"target hack zoom in\out "

--- a/5-css-click-events.html
+++ b/5-css-click-events.html
@@ -10,6 +10,15 @@
   </head>
   <body>
     <h1>Exercise 5: CSS Click Events</h1>
+    <figure>
+      <img id="zoom" src="https://photos.app.goo.gl/fd2BkcLVW1g3oy9u9/" />
+      <figcaption>
+        <a href="#zoom">ZOOM IN</a>
+        "|"
+        <a href="#">ZOOM OUT</a>
+      </figcaption>
+    </figure>
+
     <input type="checkbox" id="toggle" />
     <label for="toggle">Click me!</label>
     <div id="target">
