"update click event, make picture display file"
"update click event, make picture display file"

--- a/5-css-click-events.html
+++ b/5-css-click-events.html
@@ -11,7 +11,11 @@
   <body>
     <h1>Exercise 5: CSS Click Events</h1>
     <figure>
-      <img id="zoom" src="https://photos.app.goo.gl/fd2BkcLVW1g3oy9u9/" />
+      <img
+        id="zoom"
+        src="../resources/beautiful-floral.jpg"
+        alt="Example image"
+      />
       <figcaption>
         <a href="#zoom">ZOOM IN</a>
         "|"
